--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"@sveltejs/kit": "^1.27.4",
 		"autoprefixer": "^10.4.16",
 		"postcss": "^8.4.32",
-		"prisma": "^5.7.0",
+		"prisma": "^5.7.1",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.3.6",
@@ -26,6 +26,7 @@
 	"type": "module",
 	"dependencies": {
 		"@lucia-auth/adapter-prisma": "^3.0.2",
+		"@prisma/client": "^5.7.1",
 		"lucia": "^2.7.4"
 	}
 }
