--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
 	"dependencies": {
 		"@lucia-auth/adapter-prisma": "^3.0.2",
 		"@prisma/client": "^5.7.1",
-		"lucia": "^2.7.4"
+		"bits-ui": "^0.13.0",
+		"clsx": "^2.1.0",
+		"lucia": "^2.7.4",
+		"lucide-svelte": "^0.303.0",
+		"tailwind-merge": "^2.2.0",
+		"tailwind-variants": "^0.1.19"
 	}
 }
